@@ -9,13 +9,12 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -23,20 +22,9 @@ import java.util.Collections;
 public class SecurityConfig {
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
 
         return configuration.getAuthenticationManager();
-    }
-
-    @Bean
-    public BCryptPasswordEncoder bCryptPasswordEncoder() {
-
-        return new BCryptPasswordEncoder();
     }
 
     @Bean
@@ -48,8 +36,15 @@ public class SecurityConfig {
                             @Override
                             public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                                 CorsConfiguration configuration = new CorsConfiguration();
-
-                                configuration.setAllowedOrigins(Collections.singletonList("http://localhost:5000"));
+                                configuration.setAllowedOrigins(
+                                        List.of(
+                                                "http://localhost:5000",
+                                                "https://chuka.kr",
+                                                "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8081",
+                                                "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082",
+                                                "http://k10c107.p.ssafy.io:8083"
+                                        )
+                                );
                                 configuration.setAllowedMethods(Collections.singletonList("*"));
                                 configuration.setAllowCredentials(true);
                                 configuration.setAllowedHeaders(Collections.singletonList("*"));
@@ -72,10 +67,9 @@ public class SecurityConfig {
 
         http
                 .authorizeHttpRequests((auth) -> auth
-                        .requestMatchers("/","/swagger-resources/**", "/v3/api-docs/**", "/swagger-ui/**", "/api/v1/auth/**","/api/v1/auth/test", "/api/v1/test").permitAll()
-                        .requestMatchers("/api/v1/events/**", "/api/v1/roll-sheets/**").permitAll()
+                        .requestMatchers("/", "/swagger-resources/**", "/v3/api-docs/**", "/swagger-ui/**", "/api/v1/auth/**", "/api/v1/auth/test", "/api/v1/test").permitAll()
+                        .requestMatchers("/api/v1/events/**").permitAll()
                         .anyRequest().authenticated());
-
 
         http
                 .sessionManagement((session) -> session
